crates/decman-lib/snapshots/decman_lib__catalog__proposals__credential__tests__accept_free_credential.snap
---
source: crates/decman-lib/src/catalog/proposals/credential.rs
expression: "AcceptFreeCredential\n{\n    user_service_cid: \"00usc\".to_string(), credential_offer_cid:\n    \"00offer\".to_string(),\n}.to_daml_proto().unwrap()"
---
Value {
    sum: Some(
        Record(
            Record {
                record_id: None,
                fields: [
                    RecordField {
                        label: "userServiceCid",
                        value: Some(
                            Value {
                                sum: Some(
                                    ContractId(
                                        "00usc",
                                    ),
                                ),
                            },
                        ),
                    },
                    RecordField {
                        label: "credentialOfferCid",
                        value: Some(
                            Value {
                                sum: Some(
                                    ContractId(
                                        "00offer",
                                    ),
                                ),
                            },
                        ),
                    },
                ],
            },
        ),
    ),
}
