crates/decman-lib/snapshots/decman_lib__catalog__proposals__credential__tests__offer_paid_credential_deposit_and_weight_none.snap
---
source: crates/decman-lib/src/catalog/proposals/credential.rs
expression: "OfferPaidCredential\n{\n    user_service_cid: \"00usc\".to_string(), holder: cid(\"holder\"), id:\n    \"cred-2\".to_string(), description: \"paid cred\".to_string(), claims:\n    vec![], billing_params: BillingParams\n    {\n        fee_per_day_usd: \"1.5\".parse().expect(\"valid decimal\"),\n        billing_period_minutes: 60, deposit_target_amount_usd:\n        \"30\".parse().expect(\"valid decimal\"), holder_activity_weight: None,\n    }, deposit_initial_amount_usd: None,\n}.to_daml_proto().unwrap()"
---
Value {
    sum: Some(
        Record(
            Record {
                record_id: None,
                fields: [
                    RecordField {
                        label: "userServiceCid",
                        value: Some(
                            Value {
                                sum: Some(
                                    ContractId(
                                        "00usc",
                                    ),
                                ),
                            },
                        ),
                    },
                    RecordField {
                        label: "holder",
                        value: Some(
                            Value {
                                sum: Some(
                                    Party(
                                        "holder::1220c4010d6883f367c7f45d55b2449501620130f9b21e96379f17dea455ac7a5892",
                                    ),
                                ),
                            },
                        ),
                    },
                    RecordField {
                        label: "id",
                        value: Some(
                            Value {
                                sum: Some(
                                    Text(
                                        "cred-2",
                                    ),
                                ),
                            },
                        ),
                    },
                    RecordField {
                        label: "description",
                        value: Some(
                            Value {
                                sum: Some(
                                    Text(
                                        "paid cred",
                                    ),
                                ),
                            },
                        ),
                    },
                    RecordField {
                        label: "claims",
                        value: Some(
                            Value {
                                sum: Some(
                                    List(
                                        List {
                                            elements: [],
                                        },
                                    ),
                                ),
                            },
                        ),
                    },
                    RecordField {
                        label: "billingParams",
                        value: Some(
                            Value {
                                sum: Some(
                                    Record(
                                        Record {
                                            record_id: None,
                                            fields: [
                                                RecordField {
                                                    label: "feePerDayUsd",
                                                    value: Some(
                                                        Value {
                                                            sum: Some(
                                                                Record(
                                                                    Record {
                                                                        record_id: None,
                                                                        fields: [
                                                                            RecordField {
                                                                                label: "rate",
                                                                                value: Some(
                                                                                    Value {
                                                                                        sum: Some(
                                                                                            Numeric(
                                                                                                "1.5",
                                                                                            ),
                                                                                        ),
                                                                                    },
                                                                                ),
                                                                            },
                                                                        ],
                                                                    },
                                                                ),
                                                            ),
                                                        },
                                                    ),
                                                },
                                                RecordField {
                                                    label: "billingPeriodMinutes",
                                                    value: Some(
                                                        Value {
                                                            sum: Some(
                                                                Int64(
                                                                    60,
                                                                ),
                                                            ),
                                                        },
                                                    ),
                                                },
                                                RecordField {
                                                    label: "depositTargetAmountUsd",
                                                    value: Some(
                                                        Value {
                                                            sum: Some(
                                                                Numeric(
                                                                    "30",
                                                                ),
                                                            ),
                                                        },
                                                    ),
                                                },
                                                RecordField {
                                                    label: "holderActivityWeight",
                                                    value: Some(
                                                        Value {
                                                            sum: Some(
                                                                Optional(
                                                                    Optional {
                                                                        value: None,
                                                                    },
                                                                ),
                                                            ),
                                                        },
                                                    ),
                                                },
                                            ],
                                        },
                                    ),
                                ),
                            },
                        ),
                    },
                    RecordField {
                        label: "depositInitialAmountUsd",
                        value: Some(
                            Value {
                                sum: Some(
                                    Optional(
                                        Optional {
                                            value: None,
                                        },
                                    ),
                                ),
                            },
                        ),
                    },
                ],
            },
        ),
    ),
}
